--- a/src/components/loader.scss
+++ b/src/components/loader.scss
@@ -11,6 +11,14 @@
     animation: spin 2s linear infinite;
 }
 
+.myspinner {
+    height: 100vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
