--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,5 @@
-@import './scss/style.scss'
+@import './scss/style.scss';
+
+.cap-first::first-letter {
+    text-transform: uppercase;  //Capitalize
+}
