--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,12 @@
   height: 600px;
 }
 
+.Adminphoto {
+  width: 100%;
+  height: 80%;
+}
+
+//FORSIDE
 // .section{
 //   background: rgb(200, 220, 231);
 //     color: black;
