--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,7 +16,7 @@
   
   ul li{
     display: inline-block;
-    margin: 20px 20px;
+    margin: 20px 10px;
     text-align: center;
   }
 
@@ -32,6 +32,35 @@
   width: 100%;
   height: 80%;
 }
+
+
+// Haveservice Page
+
+.Haveservice {
+  background-color: #6bb008;
+  color: white;
+  min-height: 100vh;
+}
+
+.hr1{
+  width: 100px;
+  border: 2px solid white;
+  border-radius: 1px;
+  opacity: 100%;
+  size: 10;
+}
+
+.CurrentPic{
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
+}
+
+.CurrentPicEdit {
+  border-radius: 50%;
+  display: block;
+}
+
 
 //FORSIDE
 // .section{
